Update input data introduction.ipynb

--- a/input data introduction.ipynb
+++ b/input data introduction.ipynb
@@ -11,7 +11,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "It is a brief introduction about the presented input data in the given traffic dataset.\n",
+    "It is a brief introduction about the input data in the given traffic dataset.\n",
     "\n",
     "These data include:\n",
     "\n",
