Update Input data introduction.ipynb

--- a/Input data introduction.ipynb
+++ b/Input data introduction.ipynb
@@ -48,9 +48,9 @@
     "import osmnx as ox\n",
     "\n",
     "cityNo = '01'\n",
-    "cityname = 'San Francisco'\n",
-    "filename = '01 input data'\n",
-    "filepath = cityNo + ' ' + cityname + '/' + filename + '/'"
+    "cityname = 'San_Francisco'\n",
+    "filename = '01_Input_data'\n",
+    "filepath = cityNo + '_' + cityname + '/' + filename + '/'"
    ],
    "metadata": {
     "collapsed": false,
